exports[`test YourInfoForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Create a Seller Account
    </h1>
  </header>
  <article
    className="content-main"
    role="main">
    <span />
    <form
      action={undefined}
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="representative">
          Company Representative
        </label>
        <p
          className="hint"
          id="representative-hint">
          The authorised person who signs contracts with clients
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          id="representative"
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Company Name
        </label>
        <p
          className="hint"
          id="name-hint">
          As you would like it displayed on the Marketplace
        </p>
        <input
          aria-describedby="name-hint"
          className=""
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="abn">
          ABN
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="abn"
          name="abn"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="phone"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Continue" />
    </form>
  </article>
</div>
`;

exports[`test YourInfoForm renders with edit mode 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Your Information
    </h1>
  </header>
  <article
    className="content-main"
    role="main">
    <span />
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="representative">
          Company Representative
        </label>
        <p
          className="hint"
          id="representative-hint">
          The authorised person who signs contracts with clients
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          id="representative"
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Company Name
        </label>
        <p
          className="hint"
          id="name-hint">
          As you would like it displayed on the Marketplace
        </p>
        <input
          aria-describedby="name-hint"
          className=""
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="abn">
          ABN
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="abn"
          name="abn"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="phone"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Save & Continue" />
    </form>
  </article>
</div>
`;

exports[`test YourInfoForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Create a Seller Account
    </h1>
  </header>
  <article
    className="content-main"
    role="main">
    <span />
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="representative">
          Company Representative
        </label>
        <p
          className="hint"
          id="representative-hint">
          The authorised person who signs contracts with clients
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          id="representative"
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Company Name
        </label>
        <p
          className="hint"
          id="name-hint">
          As you would like it displayed on the Marketplace
        </p>
        <input
          aria-describedby="name-hint"
          className=""
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="abn">
          ABN
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="abn"
          name="abn"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="phone">
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="phone"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Continue" />
    </form>
  </article>
</div>
`;
